- change shop owner to shop manager in shop table. - change attandant drop down to manager on shop screen. -ability to refresh the shop table on shop screen. - ability to refresh Category table in category screen. - ability to refresh product table in product screen. - ability to show the total number of items automaticaly on inventory screen. - fix inability to create inventory - ability to refresh table at inventory screen. - ability to reduce inventory count after each purchase.

--- a/src/com/pos/inventory/view/updateInventoryView.fxml
+++ b/src/com/pos/inventory/view/updateInventoryView.fxml
@@ -393,7 +393,7 @@
                                           <Insets right="10.0" />
                                        </HBox.margin>
                                     </Label>
-                                    <TextField fx:id="itemNoOfUnits" prefHeight="25.0" prefWidth="44.0" />
+                                    <TextField fx:id="itemNoOfUnits" onInputMethodTextChanged="#calcNoOfItems" prefHeight="25.0" prefWidth="44.0" />
                                  </children>
                                  <padding>
                                     <Insets top="10.0" />
@@ -409,7 +409,7 @@
                                           <Insets right="10.0" />
                                        </HBox.margin>
                                     </Label>
-                                    <TextField fx:id="itemQtyPerUnit" prefHeight="25.0" prefWidth="95.0" />
+                                    <TextField fx:id="itemQtyPerUnit" onInputMethodTextChanged="#calcNoOfItems" prefHeight="25.0" prefWidth="95.0" />
                                  </children>
                                  <padding>
                                     <Insets top="10.0" />
@@ -427,7 +427,7 @@
                                                 <Insets right="10.0" />
                                              </HBox.margin>
                                           </Label>
-                                          <TextField fx:id="itemTotal" prefHeight="25.0" prefWidth="94.0" />
+                                          <TextField fx:id="itemTotal" disable="true" prefHeight="25.0" prefWidth="94.0" />
                                        </children>
                                        <padding>
                                           <Insets top="10.0" />
