created ALTER_TABLE_organization.txt and AttendantCtrl.java, AttendantCtrl.java,Attendant.fxml added codes to LoginCtrl.java,AttendantDAO.java,CreateLoginView.java,login.fxml, DashboardCtrl.java,OrganizationCtl.java,Organization.java, OrganizationDAO.java,DashboardView.java,dashboard.fxml. deleted CreateAtteendantCtrl.java,EditAttendantCtrl.java, EditAttendant.fxml,CreateAttendant.fxml i#

--- a/src/com/pos/account/view/login.fxml
+++ b/src/com/pos/account/view/login.fxml
@@ -118,5 +118,10 @@
             <Font name="Lucida Sans Demibold" size="16.0" />
          </font>
       </Text>
+      <Button fx:id="btn_cancel_login" layoutX="1194.0" layoutY="58.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="72.0" style="-fx-background-color: #000;" text="X" textFill="#b9b00a">
+         <font>
+            <Font name="Segoe Script Bold" size="31.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
