--- a/src/com/pos/account/view/login.fxml
+++ b/src/com/pos/account/view/login.fxml
@@ -86,7 +86,7 @@
                         </Label>
                         <ImageView fitHeight="19.0" fitWidth="22.0" layoutX="33.0" layoutY="122.0" opacity="0.49" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../../../../../Assets/images/54091415-icono-de-la-barra-de-la-trama-de-usuario-para-el-diseño-de-software-el-estilo-es-el-símbolo-gradiente-ico.jpg" />
+                              <Image url="@../../../../../Assets/images/green.jpg" />
                            </image>
                         </ImageView>
                         <ImageView fitHeight="19.0" fitWidth="22.0" layoutX="35.0" layoutY="183.0" opacity="0.59" pickOnBounds="true" preserveRatio="true">
