--- a/src/com/pos/org/view/dashboard.fxml
+++ b/src/com/pos/org/view/dashboard.fxml
@@ -3,6 +3,7 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
@@ -22,15 +23,7 @@
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="85.0" prefWidth="205.0">
                            <children>
-                              <VBox alignment="TOP_CENTER" layoutX="-1.0" prefHeight="119.0" prefWidth="207.0" style="-fx-background-color: #020529;">
-                                 <children>
-                                    <Hyperlink onAction="#sign_in" prefHeight="25.0" prefWidth="124.0" text="Sign In" textAlignment="RIGHT">
-                                       <graphic>
-                                          <FontAwesomeIconView fill="WHITE" glyphName="CIRCLE_THIN" size="10" stroke="#87766f" strokeWidth="2.0" wrappingWidth="15.0" />
-                                       </graphic>
-                                    </Hyperlink>
-                                 </children>
-                              </VBox>
+                              <VBox alignment="TOP_CENTER" layoutX="-1.0" prefHeight="119.0" prefWidth="207.0" style="-fx-background-color: #020529;" />
                            </children></AnchorPane>
                   </content>
                      <graphic>
@@ -213,7 +206,7 @@
             </Accordion>
          </children>
       </VBox>
-      <HBox prefHeight="68.0" prefWidth="1370.0" style="-fx-background-color: #020529;">
+      <HBox prefHeight="68.0" prefWidth="1366.0" style="-fx-background-color: #020529;">
          <children>
             <VBox alignment="BASELINE_LEFT" prefHeight="68.0" prefWidth="207.0" style="-fx-background-color: #020529;">
                <children>
@@ -226,5 +219,10 @@
             </VBox>
          </children></HBox>
       <AnchorPane fx:id="mainPane" layoutX="207.0" layoutY="71.0" prefHeight="733.0" prefWidth="1164.0" />
+      <Button fx:id="btn_logout" layoutX="1277.0" layoutY="9.0" mnemonicParsing="false" onAction="#logout" prefHeight="41.0" prefWidth="88.0" style="-fx-background-color: #020529;" text="Logout" textFill="#ddd70f">
+         <font>
+            <Font name="Lucida Sans Demibold" size="15.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
